Style refactor (#784)